correction nd add images and information in sections: services-civil-engineering, services-land-surveying, services-infrastructure, about-us

--- a/ver/services-civil-engineering.html
+++ b/ver/services-civil-engineering.html
@@ -2,14 +2,17 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>LTEC - Civil Engineering Services</title>
-	<link rel="canonical" href="https://ltec-group.vercel.app/ver/services-civil-engineering" />
-<meta name="description" content="LTEC Civil Engineering Services - Professional civil engineering solutions including grading plans, stormwater management, site paving, and more.">
+<title>LTEC</title>
+	<link rel="canonical" href="https://ltec-group.vercel.app/ver/services-civil-engineering />
+<meta name="description" content="LTEC">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- Favicon -->
 <link rel="shortcut icon" href="../assets/img/logo.png" type="image/x-icon">
 <link rel="apple-touch-icon" href="../assets/img/logo.png">
 <script src="../file/themes-assets/brook/assets_1.0.27/js/vendor/vendor.min.js"></script>
+<!-- <link rel="stylesheet" href="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/css/revoulation.css">
+<link rel="stylesheet" href="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/css/plugins.css"> -->
 <!-- Use the minified version files listed below for better performance and remove the files listed above -->
 <link rel="stylesheet" href="../file/themes-assets/brook/assets_1.0.27/css/bootstrap.min.css">
 <link rel="stylesheet" href="../file/themes-assets/brook/assets_1.0.27/css/revoulation.css">
@@ -186,7 +189,7 @@
 <div class="mobileheader">
 <div class="logo">
 <a href="/">
-<img src="../assets/img/logo.png" style="max-height: 80px;" alt="LTEC">
+<img src="../assets/img/logo.png" style="max-height: 80px;">
 </a>
 </div>
 <a class="mobile-close" href="#"></a>
@@ -280,190 +283,142 @@
 </div>
 </div>
 <!-- End Popup Menu -->
-<!-- start page content -->
+<style>.header-default.light-logo--version .mainmenu-wrapper .page_nav ul.mainmenu li a { color: #ffffff !important; }
+.headroom--sticky.headroom--not-top .mainmenu-wrapper .page_nav ul.mainmenu li.lavel-1>a { color: #000000 !important; }
+</style>
+<!-- Start Breadcaump Area -->
+<div class="brook-breadcaump-area bg_image--81 fullscreen breadcaump-title-bar breadcaump-title-white d-flex align-items-center pt_md--70 pt_sm--100 pb_sm--50" data-black-overlay="1" style="background-image: url('../assets/img/services/bg_civil-engineering.jpg') !important;">
+<div class="container plr--180 plr_lg--100 plr_md--50 plr_sm--50 align-items-center">
+<div class="breadcaump-inner text-start">
+<h1 class="heading heading-h1 font-20 text-white text-center">Civil Engineering</h1>
+</div>
+<div class="mt_md--30 mt_sm--30 mt--30">
+<div class="single-motive-speach wow move-up">
+<div class="content text-center" style="align-content: center; align-items: center;">
+<h4 class="text-white">LTEC offers a full range of civil engineering services, from initial conceptual design to detailed construction drawings. Our goal is to minimize site development costs and save our clients both time and money.</h4>
+<h4 class="text-white">We thrive to innovate cost effective and successful solutions from simple to complex engineering projects.</h4>
+<p class="bk_pra heading-font pr--40 text-white"></p>
+</div>
+</div>
+</div>
+<div class="row mt--30">
+</div>
+</div>
+</div>
+<!-- End Breadcaump Area -->
 <main class="page-content">
-<!-- Start -->
-<!-- Start Breadcrumb Area -->
-<div class="brook-breadcrumb-area bg_color--1 ptb--80 ptb-md--60 ptb-sm--40">
-<div class="container">
+<!-- Start Testimonial Area -->
+<div class="brook-testimonial-area ptb--50 ptb-md--80 ptb-sm--80 bg_color--5 poss_relative ">
+<div class="container space_dec--200 bg_color--5" style="position: relative; z-index: 10;">
 <div class="row">
-<div class="col-lg-12">
-<div class="breadcrumb-content text-center">
-<h2 class="heading heading-h2">CIVIL ENGINEERING SERVICES</h2>
-<div class="breadcrumb">
-<ul class="breadcrumb-list">
-<li class="breadcrumb-item"><a href="/">Home</a></li>
-<li class="breadcrumb-item active">Civil Engineering</li>
-</ul>
+	<div class="col-lg-4 col-md-6 col-sm-12 col-12">
+
+		<div class="testimonial testimonial_style--1">
+	
+			<div class="content"><strong>Grading Plans</strong></div>
+	
+		</div></div><div class="col-lg-4 col-md-6 col-sm-12 col-12">
+	
+		<div class="testimonial testimonial_style--1">
+	
+			<div class="content"><strong>Sediment and Erosion Control Management</strong></div>
+	
+		</div></div><div class="col-lg-4 col-md-6 col-sm-12 col-12">
+	
+		<div class="testimonial testimonial_style--1">
+	
+			<div class="content"><strong>Hydrology & Hydraulics Studies and Design</strong></div>
+	
+		</div></div><div class="col-lg-4 col-md-6 col-sm-12 col-12">
+	
+		<div class="testimonial testimonial_style--1">
+	
+			<div class="content"><strong>Stormwater Management</strong></div>
+	
+		</div></div><div class="col-lg-4 col-md-6 col-sm-12 col-12">
+	
+		<div class="testimonial testimonial_style--1">
+	
+			<div class="content"><strong>Site Paving</strong></div>
+	
+		</div></div><div class="col-lg-4 col-md-6 col-sm-12 col-12">
+	
+		<div class="testimonial testimonial_style--1">
+	
+			<div class="content"><strong>Sediment and Erosion Control</strong></div>
+	
+		</div></div><div class="col-lg-4 col-md-6 col-sm-12 col-12">
+	
+		<div class="testimonial testimonial_style--1">
+	
+			<div class="content"><strong>ADA Compliance</strong></div>
+	
+		</div></div><div class="col-lg-4 col-md-6 col-sm-12 col-12">
+	
+		<div class="testimonial testimonial_style--1">
+	
+			<div class="content"><strong>Value Engineering</strong></div>
+	
+		</div></div><div class="col-lg-4 col-md-6 col-sm-12 col-12">
+	
+		<div class="testimonial testimonial_style--1">
+	
+			<div class="content"><strong>Retaining Walls Design & Analysis</strong></div>
+	
+		</div></div><div class="col-lg-4 col-md-6 col-sm-12 col-12">
+	
+		<div class="testimonial testimonial_style--1">
+	
+			<div class="content"><strong>Earthwork Analysis</strong></div>
+	
+		</div></div><div class="col-lg-4 col-md-6 col-sm-12 col-12">
+	
+		<div class="testimonial testimonial_style--1">
+	
+			<div class="content"><strong>Public Improvements / Right of Way (ROW) Plans</strong></div>
+	
+		</div></div><div class="col-lg-4 col-md-6 col-sm-12 col-12">
+	
+		<div class="testimonial testimonial_style--1">
+	
+			<div class="content"><strong>Permit Processing</strong></div>
+		</div>
+	</div>
 </div>
 </div>
 </div>
-</div>
-</div>
-</div>
-<!-- End Breadcrumb Area -->
-<!-- Start Services Area -->
-<div class="brook-services-area section-ptb-xl bg_color--1">
+<!-- End Testimonial Area -->
+<!-- Start Call To Action -->
+<div class="brook-call-to-action bg_color--2 ptb--70">
 <div class="container">
-<div class="row">
-<div class="col-lg-12">
-<div class="section-title text-center wow move-up">
-<h3>OUR CIVIL ENGINEERING SERVICES</h3>
-<h2>Comprehensive civil engineering solutions for your projects.</h2>
+<div class="row align-items-center">
+<div class="col-lg-6 col-sm-6 col-12">
+<div class="call-content text-center text-sm-start">
+<h3 class="heading heading-h3 text-white wow move-up">Start working together?</h3>
 </div>
 </div>
-</div>
-<div class="row mt--100 mt_md--50 mt_sm--30">
-<!-- Service Start -->
-<div class="col-lg-4 col-md-6 col-sm-12 mb--30">
-<div class="single-service text-center">
-<div class="icon">
-<i class="fas fa-drafting-compass"></i>
-</div>
-<div class="content">
-<h5 class="heading heading-h5">Grading Plans</h5>
-<p class="bk_pra">Professional grading plans that ensure proper site drainage, erosion control, and optimal land use for your development projects.</p>
-</div>
-</div>
-</div>
-<!-- Service End -->
-<!-- Service Start -->
-<div class="col-lg-4 col-md-6 col-sm-12 mb--30">
-<div class="single-service text-center">
-<div class="icon">
-<i class="fas fa-water"></i>
-</div>
-<div class="content">
-<h5 class="heading heading-h5">Stormwater Management</h5>
-<p class="bk_pra">Comprehensive stormwater management solutions including detention basins, infiltration systems, and sustainable drainage design.</p>
-</div>
-</div>
-</div>
-<!-- Service End -->
-<!-- Service Start -->
-<div class="col-lg-4 col-md-6 col-sm-12 mb--30">
-<div class="single-service text-center">
-<div class="icon">
-<i class="fas fa-road"></i>
-</div>
-<div class="content">
-<h5 class="heading heading-h5">Site Paving</h5>
-<p class="bk_pra">Complete site paving solutions including parking lots, driveways, walkways, and ADA-compliant access routes.</p>
-</div>
-</div>
-</div>
-<!-- Service End -->
-<!-- Service Start -->
-<div class="col-lg-4 col-md-6 col-sm-12 mb--30">
-<div class="single-service text-center">
-<div class="icon">
-<i class="fas fa-shield-alt"></i>
-</div>
-<div class="content">
-<h5 class="heading heading-h5">Sediment & Erosion Control</h5>
-<p class="bk_pra">Effective sediment and erosion control measures to protect water quality and comply with environmental regulations.</p>
-</div>
-</div>
-</div>
-<!-- Service End -->
-<!-- Service Start -->
-<div class="col-lg-4 col-md-6 col-sm-12 mb--30">
-<div class="single-service text-center">
-<div class="icon">
-<i class="fas fa-universal-access"></i>
-</div>
-<div class="content">
-<h5 class="heading heading-h5">ADA Compliance</h5>
-<p class="bk_pra">ADA-compliant design ensuring accessibility for all users including ramps, parking, and pedestrian facilities.</p>
-</div>
-</div>
-</div>
-<!-- Service End -->
-<!-- Service Start -->
-<div class="col-lg-4 col-md-6 col-sm-12 mb--30">
-<div class="single-service text-center">
-<div class="icon">
-<i class="fas fa-calculator"></i>
-</div>
-<div class="content">
-<h5 class="heading heading-h5">Value Engineering</h5>
-<p class="bk_pra">Cost-effective engineering solutions that optimize project value while maintaining quality and performance standards.</p>
-</div>
-</div>
-</div>
-<!-- Service End -->
-<!-- Service Start -->
-<div class="col-lg-4 col-md-6 col-sm-12 mb--30">
-<div class="single-service text-center">
-<div class="icon">
-<i class="fas fa-mountain"></i>
-</div>
-<div class="content">
-<h5 class="heading heading-h5">Retaining Walls</h5>
-<p class="bk_pra">Structural retaining wall design and analysis for slope stabilization and site development projects.</p>
-</div>
-</div>
-</div>
-<!-- Service End -->
-<!-- Service Start -->
-<div class="col-lg-4 col-md-6 col-sm-12 mb--30">
-<div class="single-service text-center">
-<div class="icon">
-<i class="fas fa-truck"></i>
-</div>
-<div class="content">
-<h5 class="heading heading-h5">Earthwork Analysis</h5>
-<p class="bk_pra">Comprehensive earthwork analysis including cut/fill calculations, material quantities, and cost optimization.</p>
-</div>
-</div>
-</div>
-<!-- Service End -->
-<!-- Service Start -->
-<div class="col-lg-4 col-md-6 col-sm-12 mb--30">
-<div class="single-service text-center">
-<div class="icon">
-<i class="fas fa-file-alt"></i>
-</div>
-<div class="content">
-<h5 class="heading heading-h5">Permit Processing</h5>
-<p class="bk_pra">Expert permit processing services to navigate regulatory requirements and ensure project compliance.</p>
-</div>
-</div>
-</div>
-<!-- Service End -->
-</div>
-</div>
-</div>
-<!-- End Services Area -->
-<!-- Start Contact CTA Area -->
-<div class="brook-cta-area bg_color--5 ptb--80 ptb-md--60 ptb-sm--40">
-<div class="container">
-<div class="row">
-<div class="col-lg-12">
-<div class="cta-content text-center">
-<h3 class="heading heading-h3">Ready to start your civil engineering project?</h3>
-<p class="bk_pra">Contact our team today for professional civil engineering services tailored to your needs.</p>
-<a href="../ver/contact" class="brook-btn bk-btn-white text-theme btn-sd-size btn-rounded">Get Started</a>
+<div class="col-lg-6 col-sm-6 col-12">
+<div class="call-btn text-center text-sm-end mt_mobile--20 wow move-up">
+<a class="brook-btn bk-btn-white text-theme btn-sd-size btn-rounded" href="../ver/contact">Contact Us</a>
 </div>
 </div>
 </div>
 </div>
 </div>
-<!-- End Contact CTA Area -->
+<!-- End Call To Action -->
 </main>
-<!-- end page content -->
 </div>
 <!-- Footer -->
 <footer id="bk-footer" class="page-footer bg_color--ltec pl--150 pr--150 pl_lg--30 pr_lg--30 pl_md--30 pr_md--30 pl_sm--5 pr_sm--5">
 <!-- Start Footer Top Area -->
-<div class="brook-footer-inner pt--150 pb--30 pt_sm--100">
+<div class="bk-footer-inner pt--150 pb--30 pt_sm--100">
 <div class="container">
 <div class="row">
 <div class="col-lg-2 col-md-6 col-sm-6 col-12">
 <div class="footer-widget text-var--2">
 <div class="logo">
 <a href="/">
-<img src="../assets/img/logo_w_h_simple.png" style="max-height: 60px;">
+<img src="../assets/img/logo_w_h_simple.png" style="max-height: 60px;" alt="LTEC">
 </a>
 </div>
 <div class="footer-inner">
@@ -491,7 +446,7 @@
 <div class="footer-address">
 <div class="bk-hover">
 <p>809 Bowsprit Rd Ste 105<br>Chula Vista CA 91914</p>
-<p><a href="mailto:info@ltec-group.vercel.app">info@ltec-group.vercel.app</a></p>
+<p><a href="/#355c5b535a75594150561852475a40451b565a58"><span class="__cf_email__" data-cfemail="cca5a2aaa38ca0b8a9afe1abbea3b9bce2afa3a1">[email&#160;protected]</span></a></p>
 <p><a href="tel:+16196142440">+1.619.614.2440</a></p>
 </div>
 <div class="social-share social--transparent text-white">
@@ -509,6 +464,11 @@
 <li><a href="../ver/services-infrastructure">Infrastructure</a></li>
 <li><a href="../ver/services-land-surveying">Land Surveying</a></li>
 </ul></div>
+<!-- <div class="ft-instagram-list"><div class="instagram-grid-wrap">
+<div class="item-grid grid-style--1">
+<div class="thumb"><a href="#"><img src="../assets/img/logo_w_h_simple.png" alt="LTEC"></a></div>
+</div>
+</div></div> -->
 </div></div>
 <div class="col-lg-2 col-md-6 col-sm-6 col-12 mt_md--40 mt_sm--40"><div class="footer-widget text-var--2 menu--instagram">
 <h2 class="widgettitle">JOIN US</h2><div class="footer-menu"><ul class="ft-menu-list bk-hover">
@@ -525,7 +485,7 @@
 <div class="row align-items-center">
 <div class="col-lg-6 col-md-6 col-sm-12 col-12">
 <div class="copyright-left text-md-start text-center">
-<ul class="brook-copyright-menu d-flex bk-hover justify-content-center justify-content-md-start flex-wrap flex-sm-nowrap">
+<ul class="bk-copyright-menu d-flex bk-hover justify-content-center justify-content-md-start flex-wrap flex-sm-nowrap">
 <li><a href="../ver/contact">Contact us</a></li>
 <li><a href="../ver/privacy-policy">Privacy Policy & Terms of Use</a></li>
 </ul>
@@ -543,12 +503,37 @@
 </footer>
 <!--// Footer -->
 <div class="whatsapp-container" style="display: none;">
-<a target="blank" href="https://wa.me/16193026765?text=I want more information about the services">
+<a target="blank" href="http://www.longislandprogrammingpros.com">
 <img class="whatsapp-btn" src="../assets/img/whatsapp.png">
 </a>
 </div>
 <!--// Wrapper -->
 <!-- Js Files -->
+<!-- <script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/vendor/modernizr-3.6.0.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/vendor/jquery.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/popper.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/bootstrap.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/plugins.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/main.js"></script> -->
+<!-- REVOLUTION JS FILES -->
+<!-- <script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/jquery.themepunch.tools.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/jquery.themepunch.revolution.min.js"></script> -->
+<!-- SLIDER REVOLUTION 5.0 EXTENSIONS (Load Extensions only on Local File Systems ! The following part can be removed on Server for On Demand Loading) -->
+<!-- <script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.actions.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.carousel.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.kenburn.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.layeranimation.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.migration.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.navigation.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.parallax.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.slideanims.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.video.min.js"></script> -->
+<!-- Use the minified version files listed below for better performance and remove the files listed above -->
 <script data-cfasync="false" src="../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="../file/themes-assets/brook/assets_1.0.27/js/plugins.min.js"></script>
+<!-- REVOLUTION JS FILES -->
+<script src="../file/themes-assets/brook/assets_1.0.27/js/revolution.tools.min.js"></script>
+<!-- SLIDER REVOLUTION 5.0 EXTENSIONS -->
+<script src="../file/themes-assets/brook/assets_1.0.27/js/revolution.extension.min.js"></script>
 <script src="../assets/js/main_t-1721546194.js"></script>
+<script src="../file/themes-assets/brook/assets_1.0.27/js/revoulation.js"></script>
 </body></html>
