--- a/ver/services-land-surveying.html
+++ b/ver/services-land-surveying.html
@@ -1,16 +1,18 @@
-
 <!doctype html><html class="no-js" lang="es-MX">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>LTEC - Land Surveying Services</title>
-	<link rel="canonical" href="https://ltec-group.vercel.app/ver/services-land-surveying" />
-<meta name="description" content="LTEC Land Surveying Services - Professional land surveying solutions including A.L.T.A. surveying, topographic surveying, lot subdivision, and more.">
+<title>LTEC</title>
+	<link rel="canonical" href="https://ltec-group.vercel.app/ver/services-land-surveying />
+<meta name="description" content="LTEC">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- Favicon -->
 <link rel="shortcut icon" href="../assets/img/logo.png" type="image/x-icon">
 <link rel="apple-touch-icon" href="../assets/img/logo.png">
 <script src="../file/themes-assets/brook/assets_1.0.27/js/vendor/vendor.min.js"></script>
+<!-- <link rel="stylesheet" href="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/css/revoulation.css">
+<link rel="stylesheet" href="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/css/plugins.css"> -->
 <!-- Use the minified version files listed below for better performance and remove the files listed above -->
 <link rel="stylesheet" href="../file/themes-assets/brook/assets_1.0.27/css/bootstrap.min.css">
 <link rel="stylesheet" href="../file/themes-assets/brook/assets_1.0.27/css/revoulation.css">
@@ -187,7 +189,7 @@
 <div class="mobileheader">
 <div class="logo">
 <a href="/">
-<img src="../assets/img/logo.png" style="max-height: 80px;" alt="LTEC">
+<img src="../assets/img/logo.png" style="max-height: 80px;">
 </a>
 </div>
 <a class="mobile-close" href="#"></a>
@@ -281,151 +283,134 @@
 </div>
 </div>
 <!-- End Popup Menu -->
-<!-- start page content -->
+<style>.header-default.light-logo--version .mainmenu-wrapper .page_nav ul.mainmenu li a { color: #ffffff !important; }
+.headroom--sticky.headroom--not-top .mainmenu-wrapper .page_nav ul.mainmenu li.lavel-1>a { color: #000000 !important; }
+</style>
+<!-- Start Breadcaump Area -->
+<div class="brook-breadcaump-area bg_image--81 fullscreen breadcaump-title-bar breadcaump-title-white d-flex align-items-center pt_md--70 pt_sm--100 pb_sm--50" data-black-overlay="1" style="background-image: url('../assets/img/what_we_do/land_surv.jpg') !important;">
+<div class="container plr--180 plr_lg--100 plr_md--50 plr_sm--50 align-items-center">
+<div class="breadcaump-inner text-start">
+<h1 class="heading heading-h1 font-20 text-white text-center">Land Surveying</h1>
+</div>
+<div class="mt_md--30 mt_sm--30 mt--30">
+<div class="single-motive-speach wow move-up">
+<div class="content text-center" style="align-content: center; align-items: center;">
+<h4 class="text-white">Our experienced team of land surveying uses the latest technology and techniques to provide precise measurements and mapping for all land development needs.</h4>
+<h4 class="text-white">From Boundary surveys and topographic mapping to Lot Subdivisions we focused on exceeding our clients expectations.</h4>
+<p class="bk_pra heading-font pr--40 text-white"></p>
+</div>
+</div>
+</div>
+<div class="row mt--30">
+</div>
+</div>
+</div>
+<!-- End Breadcaump Area -->
 <main class="page-content">
-<!-- Start -->
-<!-- Start Breadcrumb Area -->
-<div class="brook-breadcrumb-area bg_color--1 ptb--80 ptb-md--60 ptb-sm--40">
-<div class="container">
+<!-- Start Testimonial Area -->
+<div class="brook-testimonial-area ptb--50 ptb-md--80 ptb-sm--80 bg_color--5 poss_relative ">
+<div class="container space_dec--200 bg_color--5" style="position: relative; z-index: 10;">
 <div class="row">
-<div class="col-lg-12">
-<div class="breadcrumb-content text-center">
-<h2 class="heading heading-h2">LAND SURVEYING</h2>
-<div class="breadcrumb">
-<ul class="breadcrumb-list">
-<li class="breadcrumb-item"><a href="/">Home</a></li>
-<li class="breadcrumb-item active">Land Surveying</li>
-</ul>
+	<div class="col-lg-4 col-md-6 col-sm-12 col-12">
+		<div class="testimonial testimonial_style--1">
+			<div class="content"><strong>A.L.T.A. Surveying</strong></div>
+		</div>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12 col-12">
+		<div class="testimonial testimonial_style--1">
+			<div class="content"><strong>Topographic Surveying</strong></div>
+		</div>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12 col-12">
+		<div class="testimonial testimonial_style--1">
+			<div class="content"><strong>Lot Subdivision / Lot Split / Lot Consolidation / SB9</strong></div>
+		</div>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12 col-12">
+		<div class="testimonial testimonial_style--1">
+			<div class="content"><strong>Certificate of Compliance</strong></div>
+		</div>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12 col-12">
+		<div class="testimonial testimonial_style--1">
+			<div class="content"><strong>Boundary Surveying</strong></div>
+		</div>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12 col-12">
+		<div class="testimonial testimonial_style--1">
+			<div class="content"><strong>Construction Staking</strong></div>
+		</div>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12 col-12">
+		<div class="testimonial testimonial_style--1">
+			<div class="content"><strong>Control Surveying</strong></div>
+		</div>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12 col-12">
+		<div class="testimonial testimonial_style--1">
+			<div class="content"><strong>Geographic Information Systems Support</strong></div>
+		</div>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12 col-12">
+		<div class="testimonial testimonial_style--1">
+			<div class="content"><strong>Licensed State Land Surveying</strong></div>
+		</div>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12 col-12">
+		<div class="testimonial testimonial_style--1">
+			<div class="content"><strong>Quality Control Review</strong></div>
+		</div>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12 col-12">
+		<div class="testimonial testimonial_style--1">
+			<div class="content"><strong>Record Abstracting</strong></div>
+		</div>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12 col-12">
+		<div class="testimonial testimonial_style--1">
+			<div class="content"><strong>Right of Way Mapping</strong></div>
+		</div>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12 col-12">
+		<div class="testimonial testimonial_style--1">
+			<div class="content"><strong>Easement Survey</strong></div>
+		</div>
+	</div>
 </div>
 </div>
 </div>
-</div>
-</div>
-</div>
-<!-- End Breadcrumb Area -->
-<!-- Start Service Area -->
-<div class="brook-service-area section-ptb-xl bg_color--1">
+<!-- End Testimonial Area -->
+<!-- Start Call To Action -->
+<div class="brook-call-to-action bg_color--2 ptb--70">
 <div class="container">
-<div class="row">
-<div class="col-lg-12">
-<div class="section-title text-center wow move-up">
-<h3>LAND SURVEYING SERVICES</h3>
-<h2>Professional land surveying solutions for all your development needs.</h2>
+<div class="row align-items-center">
+<div class="col-lg-6 col-sm-6 col-12">
+<div class="call-content text-center text-sm-start">
+<h3 class="heading heading-h3 text-white wow move-up">Start working together?</h3>
 </div>
 </div>
-</div>
-<div class="row mt--100 mt_md--50 mt_sm--30">
-<!-- Single Service Start -->
-<div class="col-lg-4 col-md-6 col-sm-6 mb--30">
-<div class="single-service text-center">
-<div class="icon">
-<img src="../assets/img/services/Land_Surveying.jpg" alt="Land Surveying" style="max-height: 200px; width: 100%; object-fit: cover;">
-</div>
-<div class="content">
-<h5 class="heading heading-h5">A.L.T.A. Surveying</h5>
-<p class="bk_pra">Comprehensive land title surveys that meet the American Land Title Association standards for real estate transactions.</p>
-</div>
-</div>
-</div>
-<!-- Single Service End -->
-<!-- Single Service Start -->
-<div class="col-lg-4 col-md-6 col-sm-6 mb--30">
-<div class="single-service text-center">
-<div class="icon">
-<img src="../assets/img/services/Lot_Subdivision.jpg" alt="Lot Subdivision" style="max-height: 200px; width: 100%; object-fit: cover;">
-</div>
-<div class="content">
-<h5 class="heading heading-h5">Topographic Surveying</h5>
-<p class="bk_pra">Detailed mapping of land contours, features, and elevations essential for engineering and design projects.</p>
-</div>
-</div>
-</div>
-<!-- Single Service End -->
-<!-- Single Service Start -->
-<div class="col-lg-4 col-md-6 col-sm-6 mb--30">
-<div class="single-service text-center">
-<div class="icon">
-<img src="../assets/img/services/Lot_Subdivision.jpg" alt="Lot Subdivision" style="max-height: 200px; width: 100%; object-fit: cover;">
-</div>
-<div class="content">
-<h5 class="heading heading-h5">Lot Subdivision / Lot Split / Lot Consolidation / SB9</h5>
-<p class="bk_pra">Expert assistance with lot divisions, consolidations, and SB9 lot splits for residential development.</p>
-</div>
-</div>
-</div>
-<!-- Single Service End -->
-<!-- Single Service Start -->
-<div class="col-lg-4 col-md-6 col-sm-6 mb--30">
-<div class="single-service text-center">
-<div class="icon">
-<img src="../assets/img/services/Land_Surveying.jpg" alt="Land Surveying" style="max-height: 200px; width: 100%; object-fit: cover;">
-</div>
-<div class="content">
-<h5 class="heading heading-h5">Certificate of Compliance</h5>
-<p class="bk_pra">Verification that your property complies with zoning regulations and development standards.</p>
-</div>
-</div>
-</div>
-<!-- Single Service End -->
-<!-- Single Service Start -->
-<div class="col-lg-4 col-md-6 col-sm-6 mb--30">
-<div class="single-service text-center">
-<div class="icon">
-<img src="../assets/img/services/Land_Surveying.jpg" alt="Land Surveying" style="max-height: 200px; width: 100%; object-fit: cover;">
-</div>
-<div class="content">
-<h5 class="heading heading-h5">Boundary Surveying</h5>
-<p class="bk_pra">Precise determination of property boundaries and corner locations for legal and development purposes.</p>
-</div>
-</div>
-</div>
-<!-- Single Service End -->
-<!-- Single Service Start -->
-<div class="col-lg-4 col-md-6 col-sm-6 mb--30">
-<div class="single-service text-center">
-<div class="icon">
-<img src="../assets/img/services/Land_Surveying.jpg" alt="Land Surveying" style="max-height: 200px; width: 100%; object-fit: cover;">
-</div>
-<div class="content">
-<h5 class="heading heading-h5">Construction Staking</h5>
-<p class="bk_pra">On-site marking of construction points to guide builders and ensure accurate project implementation.</p>
-</div>
-</div>
-</div>
-<!-- Single Service End -->
-</div>
-</div>
-</div>
-<!-- End Service Area -->
-<!-- Start CTA Area -->
-<div class="brook-cta-area bg_color--5 ptb--80 ptb-md--60 ptb-sm--40">
-<div class="container">
-<div class="row">
-<div class="col-lg-12">
-<div class="brook-cta text-center">
-<h2 class="heading heading-h2 text-white">Ready to start your land surveying project?</h2>
-<p class="bk_pra line-height-2-22 text-white">Contact our experienced surveying team for professional and accurate land surveying services.</p>
+<div class="col-lg-6 col-sm-6 col-12">
+<div class="call-btn text-center text-sm-end mt_mobile--20 wow move-up">
 <a class="brook-btn bk-btn-white text-theme btn-sd-size btn-rounded" href="../ver/contact">Contact Us</a>
 </div>
 </div>
 </div>
 </div>
 </div>
-<!-- End CTA Area -->
+<!-- End Call To Action -->
 </main>
-<!-- end page content -->
 </div>
 <!-- Footer -->
 <footer id="bk-footer" class="page-footer bg_color--ltec pl--150 pr--150 pl_lg--30 pr_lg--30 pl_md--30 pr_md--30 pl_sm--5 pr_sm--5">
 <!-- Start Footer Top Area -->
-<div class="brook-footer-inner pt--150 pb--30 pt_sm--100">
+<div class="bk-footer-inner pt--150 pb--30 pt_sm--100">
 <div class="container">
 <div class="row">
 <div class="col-lg-2 col-md-6 col-sm-6 col-12">
 <div class="footer-widget text-var--2">
 <div class="logo">
 <a href="/">
-<img src="../assets/img/logo_w_h_simple.png" style="max-height: 60px;">
+<img src="../assets/img/logo_w_h_simple.png" style="max-height: 60px;" alt="LTEC">
 </a>
 </div>
 <div class="footer-inner">
@@ -453,7 +438,7 @@
 <div class="footer-address">
 <div class="bk-hover">
 <p>809 Bowsprit Rd Ste 105<br>Chula Vista CA 91914</p>
-<p><a href="mailto:info@ltec-group.vercel.app">info@ltec-group.vercel.app</a></p>
+<p><a href="/#355c5b535a75594150561852475a40451b565a58"><span class="__cf_email__" data-cfemail="cca5a2aaa38ca0b8a9afe1abbea3b9bce2afa3a1">[email&#160;protected]</span></a></p>
 <p><a href="tel:+16196142440">+1.619.614.2440</a></p>
 </div>
 <div class="social-share social--transparent text-white">
@@ -471,6 +456,11 @@
 <li><a href="../ver/services-infrastructure">Infrastructure</a></li>
 <li><a href="../ver/services-land-surveying">Land Surveying</a></li>
 </ul></div>
+<!-- <div class="ft-instagram-list"><div class="instagram-grid-wrap">
+<div class="item-grid grid-style--1">
+<div class="thumb"><a href="#"><img src="../assets/img/logo_w_h_simple.png" alt="LTEC"></a></div>
+</div>
+</div></div> -->
 </div></div>
 <div class="col-lg-2 col-md-6 col-sm-6 col-12 mt_md--40 mt_sm--40"><div class="footer-widget text-var--2 menu--instagram">
 <h2 class="widgettitle">JOIN US</h2><div class="footer-menu"><ul class="ft-menu-list bk-hover">
@@ -487,7 +477,7 @@
 <div class="row align-items-center">
 <div class="col-lg-6 col-md-6 col-sm-12 col-12">
 <div class="copyright-left text-md-start text-center">
-<ul class="brook-copyright-menu d-flex bk-hover justify-content-center justify-content-md-start flex-wrap flex-sm-nowrap">
+<ul class="bk-copyright-menu d-flex bk-hover justify-content-center justify-content-md-start flex-wrap flex-sm-nowrap">
 <li><a href="../ver/contact">Contact us</a></li>
 <li><a href="../ver/privacy-policy">Privacy Policy & Terms of Use</a></li>
 </ul>
@@ -505,12 +495,37 @@
 </footer>
 <!--// Footer -->
 <div class="whatsapp-container" style="display: none;">
-<a target="blank" href="https://wa.me/16193026765?text=I want more information about the services">
+<a target="blank" href="http://www.longislandprogrammingpros.com">
 <img class="whatsapp-btn" src="../assets/img/whatsapp.png">
 </a>
 </div>
 <!--// Wrapper -->
 <!-- Js Files -->
+<!-- <script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/vendor/modernizr-3.6.0.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/vendor/jquery.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/popper.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/bootstrap.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/plugins.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/main.js"></script> -->
+<!-- REVOLUTION JS FILES -->
+<!-- <script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/jquery.themepunch.tools.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/jquery.themepunch.revolution.min.js"></script> -->
+<!-- SLIDER REVOLUTION 5.0 EXTENSIONS (Load Extensions only on Local File Systems ! The following part can be removed on Server for On Demand Loading) -->
+<!-- <script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.actions.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.carousel.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.kenburn.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.layeranimation.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.migration.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.navigation.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.parallax.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.slideanims.min.js"></script>
+<script src="https://cdn.maitret.dev/file/themes-assets/brook/assets_1.0.27/js/revolution.extension.video.min.js"></script> -->
+<!-- Use the minified version files listed below for better performance and remove the files listed above -->
 <script data-cfasync="false" src="../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="../file/themes-assets/brook/assets_1.0.27/js/plugins.min.js"></script>
+<!-- REVOLUTION JS FILES -->
+<script src="../file/themes-assets/brook/assets_1.0.27/js/revolution.tools.min.js"></script>
+<!-- SLIDER REVOLUTION 5.0 EXTENSIONS -->
+<script src="../file/themes-assets/brook/assets_1.0.27/js/revolution.extension.min.js"></script>
 <script src="../assets/js/main_t-1721546194.js"></script>
+<script src="../file/themes-assets/brook/assets_1.0.27/js/revoulation.js"></script>
 </body></html>
