fix logo in  join-us, contact and privacy-policy sections

--- a/ver/contact.html
+++ b/ver/contact.html
@@ -79,7 +79,7 @@
 <div class="header-left">
 <div class="logo">
 <a href="/" class="">
-<img src="../assets/img/logo_w_h_simple.png" class="logo_azul" style="max-height: 80px;" alt="LTEC">
+<img src="../assets/img/logo.png" class="logo_azul" style="max-height: 80px;" alt="LTEC">
 <img src="../assets/img/logo.png" class="logo_blanco" style="display: none; max-height: 80px;" alt="LTEC">
 </a>
 </div>
