--- a/ver/join-us.html
+++ b/ver/join-us.html
@@ -3,10 +3,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>LTEC</title>
-    <link rel="canonical" href="https://ltec-group.vercel.app/ver/join-us" />
-    <meta name="description" content="LTEC">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
+    <title>LTEC - Privacy Policy</title>
+    <link rel="canonical" href="https://ltec-group.vercel.app/ver/privacy-policy" />
+    <meta name="description" content="LTEC Privacy Policy - Learn about how we collect, use, and protect your personal information. Read our privacy policy and terms of use.">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
     <link rel="shortcut icon" href="../assets/img/logo.png" type="image/x-icon">
     <link rel="apple-touch-icon" href="../assets/img/logo.png">
@@ -31,18 +31,22 @@
                         'ltec-blue': '#0a2fd8',       // El azul principal actualizado
                         'ltec-blue-dark': '#0824b2',  // Un tono ligeramente más oscuro para el efecto hover del botón
                         'ltec-blue-light': '#4a70ff', // Un tono más claro para los íconos y enlaces
+                        'ltec-gray': '#6b7280',       // Color gris para los subtítulos
                     }
                 }
             }
         }
     </script>
     <!-- Google Fonts: Inter (para mantener la consistencia) -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
-        /* Estilos personalizados para el cuerpo y el input de archivo */
+        /* Estilos personalizados para el cuerpo y el contenido de la política de privacidad */
         body {
             font-family: 'Inter', sans-serif;
             margin: 0;
+            background-color: #f8f8f8; /* Fondo muy claro para la página de política */
+            color: #333;
+            line-height: 1.6;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
@@ -50,22 +54,51 @@
         main.page-content {
             flex-grow: 1;
         }
-        input[type="file"]::-webkit-file-upload-button {
-            visibility: hidden;
+        /* Estilos para el contenido de la política de privacidad (estos se anulan con las clases de Tailwind) */
+        .privacy-content h2, .privacy-content h3, .privacy-content h4 {
+            font-weight: 600;
+            margin-top: 2rem;
+            margin-bottom: 1rem;
+            /* Estos estilos de color y alineación se manejarán directamente con clases de Tailwind */
         }
-        input[type="file"]::before {
-            content: '';
+        .privacy-content h2 {
+            font-size: 1.75rem; /* ~28px */
+        }
+        .privacy-content h3 {
+            font-size: 1.5rem; /* ~24px */
+        }
+        .privacy-content h4 {
+            font-size: 1.25rem; /* ~20px */
+        }
+        .privacy-content p, .privacy-content ul {
+            font-size: 1rem;
+            margin-bottom: 1rem;
+        }
+        .privacy-content ul {
+            list-style-type: disc;
+            margin-left: 1.5rem;
+        }
+        .privacy-content li {
+            margin-bottom: 0.5rem;
+        }
+        /* Ajuste para los enlaces dentro del contenido */
+        .privacy-content a {
+            color: #0a2fd8; /* Color del enlace ltec-blue */
+            text-decoration: underline;
+        }
+        .privacy-content a:hover {
+            color: #0824b2; /* Color ltec-blue-dark al pasar el ratón */
         }
     </style>
     <!-- Fin de la integración de Tailwind CSS y configuración de colores -->
 </head>
-<body class="template-color-ltec bg-gray-100">
+<body class="template-color-ltec">
 <!--[if lte IE 9]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
 <![endif]-->
 <!-- Add your site or application content here -->
 <div id="page-preloader" class="page-loading clearfix"><div class="page-load-inner"><div class="preloader-wrap"><div class="wrap-2">
-<div class=""><img src="../assets/img/logo.png" alt="LTEC" style="max-height: 100px;"></div>
+<div class=""><img src="../assets/img/logo.png" alt="LTEC"></div>
 </div></div></div></div>
 <!-- Wrapper -->
 <div id="wrapper" class="wrapper all-wrapper">
@@ -79,11 +112,11 @@
 <div class="header-left">
 <div class="logo">
 <a href="/" class="">
-<img src="../assets/img/logo_w_h_simple.png" class="logo_azul" style="max-height: 80px;" alt="LTEC">
+<img src="../assets/img/logo.png" class="logo_azul" style="max-height: 80px;" alt="LTEC">
 <img src="../assets/img/logo.png" class="logo_blanco" style="display: none; max-height: 80px;" alt="LTEC">
 </a>
 </div>
-<div class="mainmenu-wrapper  have-not-flex d-none d-lg-block pl--40">
+<div class="mainmenu-wrapper have-not-flex d-none d-lg-block pl--40">
 <nav class="page_nav">
 <ul class="mainmenu">
 <li class="lavel-1 with--drop slide-dropdown"><a href="#"><span>ABOUT US</span></a>
